# not-alike-3.0.0

./: MANIFEST.in  Makefile  README.md  TODO.txt  pyproject.toml  setup.py
not_alike/: biostr.py  nal.py  utils.py
not_alike.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
not_alike/biostruct/lib/: dnah.c  dnah.h
not_alike3/: Makefile  __init__.py  biostr.py  nal.py  utils.py
not_alike3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
not_alike3/biostruct/: Makefile  README.txt  out.fasta  test
not_alike3/biostruct/lib/: fileio.h  seq.fas
